Cambios sugeridos por Dr. Francisco Tornés

--- a/Docs/Documento Final Tesis/includes/capitulo01.tex
+++ b/Docs/Documento Final Tesis/includes/capitulo01.tex
@@ -18,7 +18,7 @@
 \section{Antecedentes}
 \vspace{30 pt}
 \noindent
-Consultores de modelos de calidad [CITAR] de las empresas mexicanas de desarrollo de software han identificado un com'un denominador en las empresas peque'nas y medianas: Una pobre o nula administraci'on de la calidad en el proceso de desarrollo.
+Consultores de modelos de calidad de las empresas mexicanas de desarrollo de software han identificado un com'un denominador en las empresas peque'nas y medianas: Una pobre o nula administraci'on de la calidad en el proceso de desarrollo.
 
 En este tipo de situaci'on, las empresas suelen asumir que las pr'acticas de calidad agregan trabajo extra, haciendo m'as lento y complicado el proceso de desarrollo. Esto provoca el atraso en los calendarios y la entrega tardía de los productos respectivos..
 
