--- a/Docs/Documento Final Tesis/includes/tesis.bib
+++ b/Docs/Documento Final Tesis/includes/tesis.bib
@@ -115,6 +115,16 @@
   timestamp = {2011.09.23}
 }
 
+@ARTICLE{Dromey1995,
+  author = {Dromey, G.},
+  title = {A Model for Software Product Quality},
+  journal = {IEEE Transactions on Software Engineering},
+  year = {1995},
+  volume = {21},
+  owner = {CDE-Marco},
+  timestamp = {2012.04.15}
+}
+
 @ARTICLE{Freedman1984,
   author = {Freedman, G. M. and Weinberg, D. P.},
   title = {Reviews, Walkthroughs and Inspections},
@@ -326,5 +336,16 @@
   pages = {150-157},
   owner = {CDE-Marco},
   timestamp = {2011.10.10}
+}
+
+@STANDARD{ISO/IEC25000,
+  title = {ISO/IEC 25000 Software Engineering
+	
+	- Software product Quality Requirements and Evaluation (SQuaRE)},
+  organization = {ISO/IEC},
+  institution = {ISO/IEC},
+  year = {2005},
+  owner = {CDE-Marco},
+  timestamp = {2012.04.15}
 }
 
